# a7p

./: .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  VERSION  arg.pyi  brakeprofile.py  broken.a7p  go.mod  go.sum  package.json  profedit_validate_pb2.py  pyproject.toml  sh.py  spec_validator.py  test.py  test2.a7p  todo.md  tsconfig.json  validator.py
py/: .gitignore  CHANGELOG.md  MANIFEST.in  README.MD  README.md  VERSION  arg.py  brakeprofile.py  buf.gen.yaml  pyproject.toml  requirements.txt  setup.py  test.py  test1.a7p  todo.md
py/.github/: dependabot.yml
py/.github/workflows/: pytest.yml  python-publish.yml
py/a7p/: __init__.py  __main__.py  a7p.py  factory.py  profedit_pb2.pyi.bak  profedit_validate.proto  tests.py
py/a7p/buf/validate/: validate_pb2.py
py/a7p/protovalidate/: __init__.py
py/gallery/.unvalidated/.243W/: _243W__243_WIN_GECO_105GR_SP_GECO_105GR_SP_105GR_G1.a7p  _243W__243_WIN_NORMA_100GR_SP_NORMA_100GR_SP_100GR_G1.a7p
py/gallery/.unvalidated/.260REM/: _260REM_Z008_260REM_LAPUA_136GR_SC_L_LAPUA_136GR_SC_L_136GR_CDM.a7p
py/gallery/.unvalidated/.300WM/: _300WM_300WM_300WM_208GR_300WM_208GR_208GR_G7.a7p  _300WM_300WM_BARNES_180GR_TTSX_BT_BARNES_TTSX_BT_180GR_G1.a7p  _300WM_300WM_BERGER_220GR_BERGER_220GR_220GR_G7.a7p  _300WM_300WM_BLASER_BH_180GR_ACCUBOND_180GR_ACCUBOND_180GR_G7.a7p  _300WM_300WM_FEDERAL_165GR_TROPHY_FEDERAL_165GR_TROPHY_165GR_G1.a7p  _300WM_300WM_HORNADY_195GR_HPBT_MATCH_195GR_HPBT_195GR_G7.a7p  _300WM_300WM_LAPUA_185GR_SCENAR_SCENAR_185GR_185GR_CDM.a7p  _300WM_300WM_SAVAGE_LAPUA_220GRN_LAPUA_SCENAR_L_220GRN_220GR_CDM.a7p  _300WM_300WM_SCENAR_220GR_SCENAR_220GR_220GR_CDM.a7p  (+5 more)
py/gallery/12.7x108_DSHK/: 12_7X108_DSHK_MDZ_664GR_G1.a7p
py/gallery/22-250REM/: 22-250REM_WIN_50GR_SUPREME_G1.a7p
py/gallery/222REM/: 222REM_NORMA_50GR_SP_G1.a7p  222REM_NORMA_55GR_ORYX_G1.a7p  222REM_SB_50GR_SP_G1.a7p  222REM_WIN_50GR_JSP_G1.a7p
py/gallery/223REM_5.56x45/: 5_56X45_SS109_M855_BALL_62GR_FMJ_G1.a7p
py/gallery/223REM_5.56x45_NATO/: 223REM_ABR_77GR_SMK.a7p  223REM_ABR_77GR_STMK_G7.a7p  223REM_BERGER_73GR_BT_G7.a7p  223REM_RWS_55GR_TMS_G1.a7p  5.56x45_GECO_56GR_EXPRESS_G1.a7p  5.56x45_HORNADY_68GR_FMJ_G1.a7p  5.56x45_HORNADY_70GR_GMX_G7.a7p  5_56X45_M855_NATO_BALL_SS109_62GR_FMJ_G7.a7p
py/gallery/22LR/: 22LR_RWS_R50_40GR_G1.a7p
py/gallery/270WIN/: 270WIN_BALSER_130GR_CDP_G1.a7p  270WIN_WIN_140GR_ACCUBOND_CT_G1.a7p
py/gallery/270WSM/: 270WSM_ORYX_150GR_G1.a7p
py/gallery/300BLK/: 300BLK_HORNADY_150GR_FMJBT_G7.a7p  300BLK_NEXUS_125GR_FBSP_G1.a7p
py/gallery/300NM/: 300NM_BERGER_210GR_VLD_HUNT_G7.a7p  300NM_BERGER_245GR_ELITE_HUNT_G7.a7p  300NM_HORNADY_225GR_ELDM_G7.a7p  300NM_HORNADY_230GR_ATIP_G7.a7p
py/gallery/300RUM/: 300RUM_Blaser_Scirocco_180GR_G1.a7p
py/gallery/308W/: 308W_150GR_HPBT_G7.a7p  308W_170GR_SUBSONIC_G7.a7p  308W_ABR_147GR_M80_FMJ_G7.a7p  308W_ABR_155GR_A_MAX_G7.a7p  308W_ABR_168GR_A_MAX_G7.a7p  308W_ABR_178GR_BTHP_G7.a7p  308W_BERGER_168GR_G7.a7p  308W_BERGER_168GR_SUBSONIC_G7.a7p  308W_BERGER_168GR_VLD_G1.a7p  308W_BERGER_175GR_HUNT_G7.a7p  308W_BERGER_175GR_OTM_G7.a7p  308W_BERGER_185GR_CH_G7.a7p  308W_BLASER_165GR_CDP_G1.a7p  308W_DESERTTECH_175GR_G1.a7p  308W_DESERTTECH_175GR_SMK_G7.a7p  308W_FEDERAL_168GR_G7.a7p  308W_FEDERAL_180GR_TB_G1.a7p  308W_GGG_165GR_SBT_G1.a7p  308W_GGG_190GR_SMK_G7.a7p  308W_HORNADY_150GR_GMX_G7.a7p  308W_HORNADY_155GR_A_MAX_G7.a7p  308W_HORNADY_168GR_A_MAX_G7.a7p  308W_HORNADY_168GR_G7.a7p  308W_HORNADY_168GR_HPBT_G1.a7p  308W_HORNADY_168GR_HPBT_G7.a7p  308W_HORNADY_178GR_BTHP_G1.a7p  308W_HORNADY_178GR_ELD_X_PH_G7.a7p  308W_INTERLOCK_180GR_RN_G1.a7p  308W_MESKO_146GR_FMJ_G1.a7p  308W_MESKO_148GR_G1.a7p  308W_NEXUS_175GR_G7.a7p  308W_NEXUS_175GR_SUBSONIC_G1.a7p  308W_NEXUS_220GR_SMK_G7.a7p  308W_NORMA_180GR_VULKAN_G1.a7p  308W_NOSLER_165GRG1.a7p  308W_NOSLER_168GR_G1.a7p  308W_RWS_136GR_EVO_G1.a7p  308W_RWS_165GR_HIT_GREEN_G1.a7p  308W_RWS_165GR_KS_G1.a7p  308W_RWS_184GR_EVOLUTION_G1.a7p  (+13 more)
py/gallery/338LM/: 338LM_BLACKHILLS_300GR_OTM_G1.a7p  338LM_FEDERAL_300GRN_SMK_G7.a7p  338LM_FIOCCHI_300GR_SMK_G7.a7p  338LM_HORNADY_285GR_ELD_M_G7.a7p  338LM_SWISS_P_RUAG_AP_260GR_G7.a7p  338LM_UKROP_300GR_SMK_G7.a7p  338LM_UKROP_300GR_SMK_G7CDM.a7p
py/gallery/338WM/: 338WM_BLASER_MAGNUM_200GR_G1.a7p
py/gallery/375CT/: 375CT_BERGER_407GR_G7.a7p  375CT_DT_MATCH_352GR_G7.a7p  375CT_SIERRA_350GR_G1.a7p
py/gallery/375H&H/: 375H_H_RWS_300GR_KS_G1.a7p
py/gallery/408CT/: 408CT_CUTTING_EDGE_420GR_G7.a7p  408CT_SOLID_370GR_G1.a7p
py/gallery/45BASER/: 45BLASER_22_7_TMR_349GR_G1.a7p
py/gallery/5.45x39/: 5.45x39_PS_52GRN_G1.a7p
py/gallery/50BMG/: 50BMG_M33_BALL_661GR_G1.a7p  50BMG_M8_API_623GR_G1.a7p  50BMG_XM33C_660GR_G1.a7p
py/gallery/6NBR/: 6NBR_Berger_105GR_G7.a7p
py/gallery/6XC/: 6XC_NORMA_DIAMOND_LINE_105GR_G7.a7p
py/gallery/7.5x55/: 7.5x55_BLASER_165GR_CDP_G1.a7p
py/gallery/7.62x39/: 7.62x39_BARNAUL_123GR_G1.a7p  7.62x39_PS_123GR_G1.a7p  7.62x39_SELLIER_BELLOT_124GR_SP_G7.a7p
py/gallery/7.82 WARBIRD LAZZERONI/: 7.82WA_WARBIRD_LAZZERONI_150GR_G1.a7p
py/gallery/7RM/: 7RM_BERGER_VLD_HUNT_180GR _G7.a7p  7RM_Hybrid_Target_180GR_G7.a7p
py/gallery/7x64/: 7x64_NORMA_VULKAN_170GR_G1.a7p
py/gallery/7x65R/: 7x65R_RWS_177GR_ID_CLASSIC_G1.a7p
py/gallery/8x57/: 8x57_K95_BLASER_198GR_G1.a7p
py/gallery/8x68S/: 8x68S_RWS_180GR_KS_G1.a7p
py/gallery/9x21/: 9x21_8G_125GR_FMJ_G1.a7p  9x21_FIOCCHI_148GR_LL_G1.a7p  9x21_HORNADY_147GR_XTP_G1.a7p
py/gallery/RPG/: RPG_SHOT_1000GR_G1.a7p
py/src/a7p/: __init__.py  __main__.py  _compiled_schema.py  a7p.py  a7p.schema.json  exceptions.py  factory.py  logger.py  profedit_pb2.py  profedit_pb2.pyi  schema_validator.py  spec_validator.py  yupy_schema.py
py/tests/: brakeprofile.py  conftest.py  spec_validator.py  test_a7p.py  test_cli.py  test_exceptions.py  test_schema_validator.py  test_validation.py  tqdm_.py  violations_parse.py  yup_example.py  yupy_check.py
py/yup/: __init__.py  locale.py  number_schema.py  string_schema.py  validation_error.py
py/yup/util/: concat_path.py
(+831 files in other folders)
