[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "a7p"
authors = [
    { name="o-murphy" },
]

description = "Simple python3 wrapper for .a7p files"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["protobuf", "archer", "a7p"]
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "google==3.0.0",
    "protobuf==6.33.2",
    "cel-python==0.4.0",
    "tqdm==4.67.1",
    "typing_extensions==4.15.0",
    "yupy>=0.2.0b3",
]
dynamic = ["version"]


[project.urls]
"Homepage" = "https://github.com/o-murphy/a7p"
"Bug Reports" = "https://github.com/o-murphy/a7p/issues"
"Source" = "https://github.com/o-murphy/a7p"


[tool.setuptools.packages.find]
where = ["src"]
include = ["a7p*"]

[tool.setuptools_scm]
fallback_version = "0.0.0.dev0"

[project.optional-dependencies]
pydantic = ['pydantic==2.12.5']
orjson = ['orjson==3.11.5']

[project.scripts]
a7p = "a7p.__main__:main"
a7p-restore = "a7p.pydantic.restore_tool:main"

[tool.pytest]
testpaths = ["tests"]

 # uncomment to configure ruff linter/formatter
[tool.ruff]
include = [
    "pyproject.toml",
    "src/**/*.py",
]
exclude = [
    ".git",
    "__pypackages__",
    "*.egg-info",
    ".ruff_cache",
    "venv",
    ".venv",
    "__init__.py",
    "src/**/*pb2.py",
    "src/a7p/buf",
    "src/a7p/protovalidate",
]

[dependency-groups]
dev = [
    "protovalidate>=0.6.0",
    "pydantic>=2.12.5",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
]
